--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- 통신 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:label="ibjujundev_admin_app"
         android:name="${applicationName}"
