--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image: ^3.0.1 #위젯으로, 애플리케이션에서 이미지 표시
   intl: ^0.17.0  #숫자 포맷
   shared_preferences: ^2.3.3 #로컬 저장소
+  image_picker: ^0.8.4+3 #flutter에서 사진 및 동영상을 선택하거나 찍을 수 있도록 도와주는 패키지
 
 dev_dependencies:
   flutter_test:
